--- a/buku.html
+++ b/buku.html
@@ -10,7 +10,7 @@
 	<body>
 
     <header>
-        <h1><img src="images.jfif" alt="" class="image-container" width="85px" height="85px" align="center"> Perpustakaan Kabupaten Sidoarjo</h1>
+        <h1><img src="Abrissa/image/images.jfif" alt="" class="image-container" width="85px" height="85px" align="center"> Perpustakaan Kabupaten Sidoarjo</h1>
     </header>
 
 		<hr>
@@ -36,7 +36,7 @@
 
         <tr>
             <th>1</th>
-            <th><img src="image/filosofi-teras.jpg" alt="">
+            <th><img src="Abrissa/image/filosofi-teras.jpg" alt="">
                    <a href="https://id.wikipedia.org/wiki/Filosofi_Teras" target="_blank"> <p>Filosofi Teras</p></a></th>
             <th>Henry Manampiring</th>
             <th></th>
