--- a/buku.html
+++ b/buku.html
@@ -10,7 +10,7 @@
 	<body>
 
     <header>
-        <h1><img src="Abrissa/image/images.jfif" alt="" class="image-container" width="85px" height="85px" align="center"> Perpustakaan Kabupaten Sidoarjo</h1>
+        <h1><img src="Abrissa/images.jfif" alt="" class="image-container" width="85px" height="85px" align="center"> Perpustakaan Kabupaten Sidoarjo</h1>
     </header>
 
 		<hr>
